# krxns

./: .gitignore  config.yaml  hello.py  poetry_pyproject_archive.toml  pyproject.toml  slurm-5863499_1.out
artifacts/cofactors/: 241008_unpaired_cofactors.json  expanded_unpaired_cofactors.json  manually_added_unpaired.json  pickaxe_whitelist.json  unpaired_cofactors.json  unpaired_cofactors_reference.tsv
artifacts/coreactants/: paired_cofactors_reference.tsv  pickaxe_whitelist.json  top_21_whitelist.json  top_25_whitelist.json  top_50_whitelist.json  unpaired_coreactants.json
artifacts/sim_mats/: mcs.npy  (+1 more)
configs/: connect_reactions.yaml  default_chemprop_data_titration.txt  default_chemprop_data_titration_w_self_paths.tsv  find_paths.yaml  process_reactions.yaml
krxns/: cheminfo.py  config.py  ml.py  net_construction.py  network.py  networks.py  rxn_cxn.py  utils.py
notebooks/: connect_reactions_w_operators.ipynb  decide_sources.ipynb  draw.ipynb  examine_known_paths.ipynb  explore_two_molecule_node_states.ipynb  graph_traversal_analysis.ipynb  initial_kr_network_analysis.ipynb  known_paths_qty_c.ipynb  known_reactions_ccm_2_hop.ipynb  make_experiment_configs.ipynb  path_structural_variation_analysis.ipynb  path_structural_variation_figures.ipynb  pathwise_value_fcn_figures.ipynb  spl_model_check.ipynb  spot_check_connected_reactions.ipynb  spot_check_reaction_network.ipynb  view_loss_curves.ipynb
scripts/: assign_brics_rct_pdt_pairs.py  compare_compound_structures.py  connect_reactions.py  construct_reaction_network.py  find_paths.py  path_structural_variation_analysis.py  pathwise_value_fcn_analysis.py  predict.py  process_reactions.py  sample_paths.py  store_cofactors.py  store_spl_data.py  store_unpaired_cofactors.py  train.py  traverse_reaction_graph.py
(+16 files in other folders)
