[project]
name = "krxns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ergochemics",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "rdkit>=2025.3.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "krxns",
    "pytest>=8.3.5",
]

[tool.uv.sources]
ergochemics = { git = "https://github.com/stefanpate/ergochemics.git" }
krxns = { workspace = true }
